[package]
name = "flam"
version = "0.1.0"
authors = ["Osamu Koga <osak.63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
