[package]
name = "flam"
version = "0.1.0"
authors = ["Osamu Koga <osak.63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
scraper = "0.12"
ego-tree = "0.6"
selectors = "0.22"
log = "0.4"
env_logger = "0.8"
xml-rs = "0.8"